syntax = "proto3";

package user;

message UserModel {
    int32 user_id = 1;
    string user_name = 2;
    string user_password = 3;
}