syntax = "proto3";

package user;

import "user.proto";

service UserService {
    rpc UserReg (UserModel) returns (UserResponse) {
    }
}

message UserRequest {
}

message UserResponse {
    string status = 1;
    string message = 2;
}